Fixed alignment for basket icon

--- a/stylesheets/plugins/blog-post.less
+++ b/stylesheets/plugins/blog-post.less
@@ -11,6 +11,11 @@
 }
 
 
+[data-name="blogpost"] {
+    z-index: 1;
+}
+
+
 // Single blog post container
 .post-article {
     position: relative;
