--- a/stylesheets/widgets/navigation.less
+++ b/stylesheets/widgets/navigation.less
@@ -496,12 +496,12 @@
 //  Hide Navigation Overlay
 // --------------------------
 
-// [data-widget-type="extendednavigation"] .widget-overlay,
-// [data-widget-type="extendednavigation"] .widget-overlay ul.widget__list.list--options {
-//     display: none!important;
-// }
+body:not(#migrated-site) [data-widget-type="extendednavigation"] .widget-overlay,
+body:not(#migrated-site) [data-widget-type="extendednavigation"] .widget-overlay ul.widget__list.list--options {
+    display: none!important;
+}
 
-// .animate [data-widget-type="extendednavigation"] .widget-overlay {
-//     display: block!important;
-// }
+body:not(#migrated-site) .animate [data-widget-type="extendednavigation"] .widget-overlay {
+    display: block!important;
+}
 
